<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorSilver">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/showDefaultProfile"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/lnrlt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_profile"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorSilver"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/firstname"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Jonh"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_title_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lastname"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Doe"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_title_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="+380XXXXXXXXX"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_title_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/city"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="London"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />


        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:padding="20dp"
            android:text="@string/back"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </LinearLayout>



</RelativeLayout>