<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorSilver">

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/home"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/btn_fillProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_home"
        android:layout_marginTop="150dp"
        android:padding="20dp"
        android:text="@string/fillProfile"
        android:textSize="20sp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/btn_showProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_fillProfile"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/profile"
        android:textSize="20sp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"/>



</RelativeLayout>